tests/toylang/neg/000886_mutation.toylang
program a = { a while a do sleep; } .
